tui/src/views/snapshots/toon_console_tui__views__chain_seed__tests__renders_before_any_status_has_arrived.snap
---
source: src/views/chain_seed.rs
expression: output
---
┌ Chain Seed ────────────────────────────────────────────────────────────────────────────┐
│Reading…                                                                                │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
