tui/src/views/snapshots/toon_console_tui__views__chain_seed__tests__renders_the_absent_acknowledged_state.snap
---
source: src/views/chain_seed.rs
expression: output
---
┌ Chain Seed — none yet ─────────────────────────────────────────────────────────────────┐
│This account has no Chain Seed yet. Mint a new one, or import a phrase you already use. │
│                                                                                        │
│ Mint a Chain Seed                                                                      │
│ Import a mnemonic                                                                      │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
