tui/src/views/snapshots/toon_console_tui__views__chain_seed__tests__renders_the_absent_unacknowledged_state.snap
---
source: src/views/chain_seed.rs
expression: output
---
┌ Chain Seed — none yet ─────────────────────────────────────────────────────────────────┐
│Before this account has any money in it                                                 │
│Whoever holds this account's Nostr key holds its funds.                                 │
│                                                                                        │
│ I understand — continue                                                                │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
