tui/src/views/snapshots/toon_console_tui__views__chain_seed__tests__renders_the_unknown_state.snap
---
source: src/views/chain_seed.rs
expression: output
---
┌ Chain Seed — reading… ─────────────────────────────────────────────────────────────────┐
│Before this account has any money in it                                                 │
│Whoever holds this account's Nostr key holds its funds.                                 │
│                                                                                        │
│ I understand — continue                                                                │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
